--- a/dino_data/project_dino/readme
+++ b/dino_data/project_dino/readme
@@ -1,1 +1,12 @@
-Project on data of dinosurus
+<b>Project on data of dinosaurs</b>
+#################################################
+Part 1: Given the csv above, provide the species with the largest average length.
+If a length is not specified for a species, assume it is 1.0m. 
+If a species is not provided, you can ignore the entire row.
+
+Example Output: sanjuanensis
+##################################################################3
+Part 2: Given the csv above, provide a solution that returns a list of lists of the dinosaur names, where 
+each sub list contains names of dinosaurs that can be made using the same letters.  
+
+Example Output: [[‘allosaurus’, ‘aralosaurus’], ['austrosaurus', 'torosaurus']
